--- a/login.html
+++ b/login.html
@@ -31,5 +31,5 @@
 </body>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.cookie.js"></script>
-<script src="js/login.js"></script>>
+<script src="js/login.js"></script>
 </html>
