--- a/manage.html
+++ b/manage.html
@@ -57,6 +57,7 @@
     </div>
     <div class="edit content">
         <div class="edit-main">
+            <i class="iconfont icon-close"></i>
             <h3 class="title">编辑数据</h3>
             <form action="" method="post">
                 <p>姓名：<input type="text" id="edit-user"></p>
@@ -74,11 +75,13 @@
             </form>
         </div>
         <div class="test-main">
+            <i class="iconfont icon-close"></i>
             <h3>请填写接受测试的手机号：</h3>
             <div><input type="text" class="test-phone"></div>
             <button type="button" id="start-test">开始测试</button>
         </div>
         <div class="add-acco-main">
+            <i class="iconfont icon-close"></i>
             <form action="" method="post">
                 <p>用户名：<input type="text" id="edit-user"></p>
                 <p>密码：<input type="text" id="edit-phone"></p>
@@ -92,16 +95,18 @@
             </form>
         </div>
         <div class="add-acti-main">
-           <form action="" method="post">
-               <p>流程名称：<input type="text" id="process-name"></p>
-               <p>选择模板：
-                   <select>
-                       <option value="">产品</option>
-                       <option value="">视觉</option>
-                   </select>
-               </p>
-               <button type="button" id="confirm-add-acti">确定添加</button>
-           </form> 
+            <i class="iconfont icon-close"></i>
+            <form action="" method="post">
+                <h3>添加活动</h3>
+                <p>流程名称：<input type="text" id="process-name"></p>
+                <p>选择模板：
+                    <select>
+                        <option value="">产品</option>
+                        <option value="">视觉</option>
+                    </select>
+                </p>
+                <button type="button" id="confirm-add-acti">确定添加</button>
+            </form> 
         </div>
     </div><!-- end edit -->
     <div class="content-group">
