--- a/manage.html
+++ b/manage.html
@@ -98,13 +98,13 @@
             <i class="iconfont icon-close"></i>
             <form action="" method="post">
                 <h3>添加活动</h3>
-                <p>流程名称：<input type="text" id="process-name"></p>
-                <p>选择模板：
-                    <select>
-                        <option value="">产品</option>
-                        <option value="">视觉</option>
-                    </select>
-                </p>
+                <p>活动名称：<input type="text" class="acti-name"></p>
+                <p>最多人数：<input type="text" class="max-num"></p></p>
+                <p>活动地点：<input type="text" class="acti-location"></p></p>
+                <p>开始日期：<input type="datetime-local" class="acti-st"></p>
+                <p>截止日期：<input type="datetime-local" class="acti-et"></p>
+                <p>时间描述：<input type="text" class="time-des"></p>
+                <p>活动简介：<textarea class="acti-summary"></textarea></p>
                 <button type="button" id="confirm-add-acti">确定添加</button>
             </form> 
         </div>
